# pyroot

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yaml  test.yaml
pyroot/: __main__.py  argparser.py  project.py  template.py  template_files.txt
pyskel/: __main__.py  _version.py  test_version.py
tests/: test_create.py
