[metadata]
name = pyskel
description = Create the skeleton for a python project
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/pyskel
license = MIT
license_file = LICENSE
version = versioneer:get_version

[options]
packages = find:

[options.entry_points]
console_scripts =
    pyskel = pyskel.__main__:main

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pyskel/_version.py
versionfile_build = pyskel/_version.py
tag_prefix =
parentdir_prefix = pyskel-
