[metadata]
name = pyroot
description = Create the skeleton for a python project
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/pyroot
license = MIT
license_file = LICENSE
version = versioneer:get_version

[options]
packages = find:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    pyroot = pyroot.__main__:main

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = pyroot/_version.py
versionfile_build = pyroot/_version.py
tag_prefix =
parentdir_prefix = pyroot-
