[metadata]
name = pyroot
description = Create the skeleton for a python package/project
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/pyroot
license = MIT
license_file = LICENSE
version = versioneer:get_version

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    pyroot = pyroot.__main__:main

[options.package_data]
pyroot = template.zip
